lanecwe-Prod/src/objects/ServiceCategory__c.object
<CustomObject>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Add-on/Feature</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>ServiceCategories</relationshipLabel>
        <relationshipName>ServiceCategories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Category_Externa_ID__c</fullName>
        <externalId>true</externalId>
        <label>Service_Category_Externa_ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Package</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>ServiceCategories</relationshipLabel>
        <relationshipName>ServiceCategories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ServiceCategory</label>
    <nameField>
        <displayFormat>SOL-{0000}</displayFormat>
        <label>ServiceCategory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ServiceCategories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>